payas-server-core/src/validation/snapshots/payas_server_core__validation__document_validator__tests__invalid_subfield.snap
---
source: payas-server-core/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    InvalidField(
        "foobar",
        "Concert",
        Pos(6:21),
    ),
)
