payas-server-core/src/validation/snapshots/payas_server_core__validation__document_validator__tests__stray_argument_invalid.snap
---
source: payas-server-core/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    StrayArguments(
        [
            "foo",
        ],
        "concert",
        Pos(3:17),
    ),
)
