payas-server-core/src/validation/snapshots/payas_server_core__validation__document_validator__tests__variable_resolution_invalid.snap
---
source: payas-server-core/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    VariableNotFound(
        "venue_id",
        Pos(2:39),
    ),
)
