payas-server-core/src/validation/snapshots/payas_server_core__validation__document_validator__tests__variable_resolution_valid.snap
---
source: payas-server-core/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(
                            1,
                        ),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
            ValidatedField {
                alias: None,
                name: Name(
                    "venue",
                ),
                arguments: {
                    "id": Number(
                        Number(
                            2,
                        ),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "name",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
